# exam-grading

./: .gitignore
learning-cxx/: CMakeLists.txt
learning-cxx/exercises/00_hello_world/: main.cpp
learning-cxx/exercises/08_pointer/: main.cpp
learning-cxx/exercises/10_trivial/: main.cpp
learning-cxx/exercises/11_method/: main.cpp
learning-cxx/exercises/15_class_clone/: main.cpp
learning-cxx/exercises/16_class_move/: main.cpp
learning-cxx/exercises/19_class_virtual_destruct/: main.cpp
learning-cxx/exercises/20_function_template/: main.cpp
learning-cxx/exercises/21_runtime_datatype/: main.cpp
learning-cxx/exercises/22_class_template/: main.cpp
learning-cxx/exercises/23_template_const/: main.cpp
learning-cxx/exercises/24_std_array/: main.cpp
learning-cxx/exercises/26_std_vector_bool/: main.cpp
learning-cxx/exercises/27_strides/: main.cpp
learning-cxx/exercises/30_std_unique_ptr/: main.cpp
learning-cxx/exercises/32_std_transform/: main.cpp
learning-cxx/exercises/33_std_accumulate/: main.cpp
